added registration page and JS

--- a/register.html
+++ b/register.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Practice</title>
+    <title>Register Practice</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
         <div class="card">
-            <h1>Login</h1>
+            <h1>Register User</h1>
             <div class="form-inputs">
                 <label for="userName">Username</label>
                 <input type="text" id="userName" placeholder="Username">
@@ -21,17 +21,25 @@
                 <label for="pwd">Password:</label>
                 <input type="text" id="pwd" placeholder="pwd">
             </div>
-            <a class="btn" id="loginBtn" href="#">Login</a>
-            <a class="btn" id="logoutBtn" href="#">Logout</a>
-            <div id="register">
-                <a href="register.html">Create an account!</a>
+          
+            <div class="registration">
+                <a href="index.html" id="register">Submit</a>
             </div>
         </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
 </body>
-
-<script src="main.js"></script>
 <script src="registration.js"></script>
-
 </html>
