--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <a class="btn" id="loginBtn" href="#">Login</a>
             <a class="btn" id="logoutBtn" href="#">Logout</a>
-            <div id="register">
+            <div class="registration">
                 <a href="register.html">Create an account!</a>
             </div>
         </div>
@@ -32,6 +32,5 @@
 </body>
 
 <script src="main.js"></script>
-<script src="registration.js"></script>
 
 </html>
